--- a/login.html
+++ b/login.html
@@ -5,7 +5,10 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h1>this is about</h1>
-<h2>this is my about2</h2>
+<h1>login form</h1>
+<form action="#">
+Name:<input type="text" name="name">
+<button type="submit">login</button>
+</form>
 </body>
 </html>
